<resources>
    <string name="app_name">Moopis</string>
    <string name="title">Title</string>
    <string name="poster">Poster of Movie</string>
    <string name="image">Image View</string>
    <string name="overview_title">Overview</string>
    <string name="overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Feugiat vivamus at augue eget arcu dictum varius duis.</string>
    <string name="vote_average">8.8</string>
    <string name="release_date_title">Release Date</string>
    <string name="release_date">20–08–2021</string>
    <string name="review">Reviews</string>
    <string name="name">Name</string>
    <string name="home_title">Movie</string>
    <string name="detail_title">Detail</string>
    <string name="error_message">an error occurred while fetching data</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="not_review">No Reviews Yet</string>
    <string name="see_all"><u>See All Reviews</u></string>
    <string name="trailer">Trailer</string>
    <string name="time_out">Timeout</string>
    <string name="retry">Retry</string>
</resources>